--- a/Admin/.env
+++ b/Admin/.env
@@ -1,2 +1,3 @@
 PORT=3000
-ADMIN_DB= 'mongodb://localhost:27017/admin'
+MONGO_URI= 'mongodb://localhost:27017/admin'
+REDIS_URI= 'redis://localhost:6379'
